package org.example.savory.api.model.entity;

//@Getter @Setter
//class Comment {
//
//  Long id;
//  User author;
//  Recipe recipe;
//  String content;
//  LocalDateTime createdAt;
//
//}
