package org.example.savory.api.model.entity;

//@Getter @Setter
//class Rating {
//
//  Long id;
//  User user;
//  Recipe recipe;
//  int score;
//
//}
