@startuml
entity Recipe {
  +Long id
  +String title
  +String description
  +String instructions
  +String imageUrl
  +int preparationTime
  +int cookingTime
  +int servings
  +double rating
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
}

entity Ingredient {
  +Long id
  +String name
  +String unit
}

entity RecipeIngredient {
  +Long id
  +String quantity
}

entity Category {
  +Long id
  +String name
}

entity Tag {
  +Long id
  +String name
}

entity User {
  +Long id
  +String username
  +String email
  +String passwordHash
}

entity Comment {
  +Long id
  +String content
  +LocalDateTime createdAt
}

entity Rating {
  +Long id
  +int score
}

RecipeIngredient }|--|| Recipe : belongs to
RecipeIngredient }|--|| Ingredient : contains

Recipe }|--|| Category : categorized as
Recipe }|--|| Tag : tagged with
Recipe }|--|| Comment : has
Recipe }|--|| Rating : rated by
Recipe }|--|| User : authored by

Comment }|--|| User : created by
Rating }|--|| User : given by
User }|--|| Recipe : submits
@enduml